syntax = "proto3";

package protocol;

option java_package = "org.altoro.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "WitnessCreateContract"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

message WitnessCreateContract {
    bytes owner_address = 1;
    bytes url = 2;
}

message WitnessUpdateContract {
    bytes owner_address = 1;
    bytes update_url = 12;
}

message VoteWitnessContract {
    message Vote {
        bytes vote_address = 1;
        int64 vote_count = 2;
    }
    bytes owner_address = 1;
    repeated Vote votes = 2;
    bool support = 3;
}


message DelegateContract {
    bytes delegate_address = 1;
    int64 delegate_count = 2;
    bytes owner_address = 3;
    bool support = 4;
}

message UnDelegateContract {
    bytes delegate_address = 1;
    bytes owner_address = 2;
    int64 delegate_count = 3;
    bool support = 4;
}

